--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -20,7 +20,7 @@
 
 .profile__name {
   margin: 0 0 12px;
-  font-weight: 500px;
+  font-weight: 500;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -45,7 +45,7 @@
   border: none;
   background: transparent;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   text-decoration: none;
@@ -106,5 +106,12 @@
     margin: 0;
     width: 100%;
     min-height: 52px;
+  }
+
+  .profile__edit-btn {
+    margin: 0 auto 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
